footer and navbar added

--- a/templates/blogs.ejs
+++ b/templates/blogs.ejs
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
+
+    <%- include("partials/navbar.ejs") %>
+
     <h1>Welcome to our blogs</h1>
+    <br>
+
+    <%- include("partials/footer.ejs") %>
+
 </body>
 </html>
