--- a/templates/signup.ejs
+++ b/templates/signup.ejs
@@ -5,75 +5,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Company|Signup</title>
+    <link rel="stylesheet" href="/css/login.css">
 </head>
 
 <body>
 
-    <form action="/signup">
+    <%- include("partials/navbar.ejs") %>
+
+    <form class="form" action="/signup">
         <h2>Sign up</h2>
-        <label for="name">Name</label>
-        <input type="text" name="name" required />
+        <input class="input" type="text" name="name" required placeholder="Name"/>
         <div class="name error"></div>
 
-        <label for="phone">Phone-No</label>
-        <input type="number" name="phone" required />
+        <input class="input" type="number" name="phone" required placeholder="Phone-No"/>
         <div class="phone error"></div>
 
-        <label for="email">Email</label>
-        <input type="text" name="email" required />
+        <input class="input" type="text" name="email" required placeholder="E-mail" />
         <div class="email error"></div>
 
-        <label for="password">Password</label>
-        <input type="password" name="password" required />
+        <input class="input" type="password" name="password" required placeholder="Password"/>
         <div class="password error"></div>
 
-        <button>Sign up</button>
+        <button class="btn button">Sign up</button>
     </form>
 
-    <script>
-
-        const form = document.querySelector('form');
-        const emailError = document.querySelector('.email.error');
-        const nameError = document.querySelector('.name.error');
-        const phoneError = document.querySelector('.phone.error');
-        const passwordError = document.querySelector('.password.error');
-
-        form.addEventListener('submit', async (e) => {
-            e.preventDefault();
-
-            emailError.textContent = "";
-            nameError.textContent = "";
-            phoneError.textContent = "";
-            passwordError.textContent = "";
-
-            const email = form.email.value;
-            const name = form.name.value;
-            const phone = form.phone.value;
-            const password = form.password.value;
-
-            const res = await fetch('/signup', {
-                method: 'POST',
-                body: JSON.stringify({ email, password ,name ,phone }),
-                headers: { 'Content-Type': 'application/json' }
-            });
-
-            const data = await res.json();
-            console.log(data.errors);
-            if (data.errors) {
-                emailError.textContent = data.errors.email;
-                nameError.textContent = data.name.email;
-                phoneError.textContent = data.phone.email;
-                passwordError.textContent = data.errors.password;
-            }
-
-            if (data.user) {
-                location.assign("/");
-            }
-
-        })
-
-    </script>
+    <%- include("partials/footer.ejs") %>
+    <script src="/js/signup.js"></script>
 
 </body>
 
