--- a/templates/partials/footer.ejs
+++ b/templates/partials/footer.ejs
@@ -50,10 +50,10 @@
                                 <a href="#" class="text-reset">About Us</a>
                             </p>
                             <p>
-                                <a href="#" class="text-reset">Contact Us</a>
+                                <a href="/contact" class="text-reset">Contact Us</a>
                             </p>
                             <p>
-                                <a href="/blogs" class="text-reset">Blogs</a>
+                                <a href="/blog" class="text-reset">Blogs</a>
                             </p>
                         </div>
 
