--- a/templates/partials/navbar.ejs
+++ b/templates/partials/navbar.ejs
@@ -3,15 +3,15 @@
 <link rel="stylesheet" href="/css/navbar.css">
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Logo</a>
+    <a class="navbar-brand" href="/">Logo</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+            <li class="nav-item ">
+                <a class="nav-link" href="/">Home </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">About Us</a>
@@ -39,7 +39,8 @@
         </ul>
         <ul class="login">
             <% if(user) {%>
-                <h5 style="padding:7px" class="nav-link">Welcome <%=user.name%></h5>
+                <h5 style="padding:7px" class="nav-link">Welcome <%=user.name%>
+                </h5>
                 <li class="nav-item">
                     <button class="btn"><a class="nav-link log" href="/logout">Logout</a></button>
                 </li>
