--- a/static/css/showblog.css
+++ b/static/css/showblog.css
@@ -81,3 +81,10 @@ hr {
     color: blue !important;
     border: 2px solid black;
 }
+
+.avatar {
+    vertical-align: middle;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
