--- a/templates/showBlog.ejs
+++ b/templates/showBlog.ejs
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Company|<%= blog.title%>
     </title>
+    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     <link rel="stylesheet" href="/css/showblog.css">
 </head>
 
@@ -59,10 +60,12 @@
                                 <hr>
 
                                 <% if(blog.comments.length !=0) {%>
-                                    <% for(let j=0;j<blog.comments.length;j++){ %>
+                                    <% for(let j=blog.comments.length -1;j>=0;j--){ %>
                                         <div class="section2">
                                             <!-- show comment -->
-                                            <span style="font-size: 20px;">Comment by: <%=blog.comments[j].name %>
+                                            <span style=" display: flex; align-items: center; font-size: 20px;"><img
+                                                    src="https://www.w3schools.com/howto/img_avatar.png" alt="Avatar"
+                                                    class="avatar"> &nbsp <%=blog.comments[j].name %>
                                             </span>
                                             <span>
                                                 <%=blog.comments[j].date.toLocaleString() %>
@@ -79,9 +82,6 @@
                             </div>
 
         </div>
-
-
-
 
         <%- include("partials/footer.ejs") %>
             <script src="/js/showblog.js"></script>
