--- a/static/css/showblog.css
+++ b/static/css/showblog.css
@@ -9,6 +9,8 @@
     border-radius: 10px;
     margin-top: 20px !important;
     padding: 20px;
+    display: flex;
+    flex-direction: column;
     word-wrap: break-word;
 }
 
