--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -17,7 +17,7 @@
 }
 
 .card {
-    width: 40%;
+    width: 70%;
     background-color: #e0e0e05c !important;
     min-height: 300px;
     border-radius: 10px !important;
@@ -72,7 +72,7 @@
 .create {
     text-decoration: none;
     border-radius: 10px;
-    width: 20%;
+    width: 20rem;
     margin: auto !important;
     padding: 10px !important;
     color: black;
@@ -83,4 +83,13 @@
     border: 2px solid #fff176 !important;
     background-color: transparent !important;
     text-decoration: none;
+}
+
+@media only screen and (max-width:650px) {
+    .card{
+        width: 100% !important;
+    }
+    .create{
+        width: 50% !important;
+    }
 }
