--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,33 +1,39 @@
 .form {
-    width: 40%;
+    width: 100%;
     margin: 40px auto;
-    height: 450px;
-    box-shadow: 1px 1px 15px 1px grey;
-    border-radius: 20px;
+    height: 250px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
 
-@media only screen and (max-width:900px){
-    .form{
-        width: 65%;
+@media only screen and (max-width:900px) {
+    .left {
+        width: 80% !important;
+        text-align: center;
     }
-}
-@media only screen and (max-width:650px){
-    .form{
-        width: 80%;
+
+    .input{
+        width: 100% !important;
+    }
+
+    .right {
+        width: 80% !important
+    }
+
+    .mainbody {
+        flex-direction: column;
     }
 }
 
 .input {
-    width: 80%;
-    padding: 7px;
+    width: 70%;
+    padding: 15px;
     margin: 10px auto;
     border-radius: 10px;
     text-align: center;
-    font-size: 17px;
+    font-size: 16px;
 }
 
 .button {
@@ -35,7 +41,39 @@
     padding: 10px !important;
 }
 
+.mainbody {
+
+    display: flex;
+    width: 87%;
+    margin: auto;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    min-height: 80vh;
+
+}
+
+.left {
+    width: 40%;
+    margin: 20px auto;
+}
+
+.image {
+    width: 100%;
+    height: 300px;
+}
+
+.right {
+    margin: 20px auto;
+    width: 45%
+}
+
+.button {
+    background-color: #29bb8a !important;
+}
+
 .button:hover {
-    color: blue;
-    border: 2px solid black;
+    background-color: unset !important;
+    border: 2px solid #29bb8a !important;
+    color: black;
 }
