--- a/templates/signup.ejs
+++ b/templates/signup.ejs
@@ -6,29 +6,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Company|Signup</title>
-    <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="/css/signup.css">
 </head>
 
 <body>
 
     <%- include("partials/navbar.ejs") %>
 
-        <form class="form" action="/signup">
-            <h2>Sign up</h2>
-            <input class="input" type="text" name="name" required placeholder="Name" />
-            <div class="name error"></div>
+        <div class="mainbody">
+            <div class="left">
+                <img class="leftin image"
+                    src="https://preview.colorlib.com/theme/bootstrap/login-form-07/images/undraw_remotely_2j6y.svg"
+                    alt="">
+            </div>
 
-            <input class="input" type="number" name="phone" required placeholder="Phone-No" />
-            <div class="phone error"></div>
+            <div class="right">
+                <form class="form" action="/signup">
+                    <h2>Sign up</h2>
+                    <input class="input" type="text" name="name" required placeholder="Name" />
+                    <div class="name error"></div>
 
-            <input class="input" type="text" name="email" required placeholder="E-mail" />
-            <div class="email error"></div>
+                    <input class="input" type="number" name="phone" required placeholder="Phone-No" />
+                    <div class="phone error"></div>
 
-            <input class="input" type="password" name="password" required placeholder="Password" />
-            <div class="password error"></div>
+                    <input class="input" type="text" name="email" required placeholder="E-mail" />
+                    <div class="email error"></div>
 
-            <button class="btn button">Sign up</button>
-        </form>
+                    <input class="input" type="password" name="password" required placeholder="Password" />
+                    <div class="password error"></div>
+
+                    <button class="btn button">Sign up</button>
+                </form>
+            </div>
+        </div>
 
         <%- include("partials/footer.ejs") %>
             <script src="/js/signup.js"></script>
